# p4est

./: .gitmodules
cmake/: options.cmake  sc.cmake
example/: CMakeLists.txt
example/simple/: Makefile.am  icosahedron_connectivity.c  icosahedron_connectivity.h  ring_connectivity.c  ring_connectivity.h  shell2d_connectivity.c  shell2d_connectivity.h  simple2_iterate.c
example/steps/: p4est_step3_timing.c
src/: p4est_connectivity.c  p4est_lnodes.c  p4est_lnodes.h  p4est_to_p8est.h  p8est_lnodes.h
